Fix spacing of attach pages button
When the button is not sticky this makes it:
- the same distance from the previous page of the letter that another
  page would be
- the same distance away from the ‘Template ID’ header as the ‘Last
  edited’ header is from the ‘Template ID’ header

Basically it makes things look nice and even and grouped nicely.

--- a/app/assets/stylesheets/views/template.scss
+++ b/app/assets/stylesheets/views/template.scss
@@ -1,5 +1,11 @@
 .template-container {
   position: relative;
+
+  &--with-attach-pages-button {
+    .letter {
+      margin-bottom: 0;
+    }
+  }
 }
 
 %edit-template-link,
